<resources>
    <string name="app_name">SweetsBook</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heatbtn">heatbtn</string>
    <string name="sharebtn">sharebtn</string>
    <string name="recipeimage">recipeimage</string>
    <string name="welcome_to_our_sweet_recipe_app_where_every_dessert_lover_s_dream_comes_to_life_indulge_in_a_world_of_delectable_sweets_where_you_can_explore_and_create_mouth_watering_recipes_with_ease_our_app_features_user_friendly_navigation_that_makes_it_easy_for_you_to_browse_through_recipes">Welcome to our sweet recipe app, where every dessert lover\'s dream comes to life! Indulge in a world of delectable sweets, where you can explore and create mouth-watering recipes with ease.Our app features user-friendly navigation that makes it easy for you to browse through recipes.</string>
    <string name="rate_now">Rate Now</string>
    <string name="todo">TODO</string>
    <string name="rate_our_app">Rate our App</string>
    <string name="if_you_are_enjoy_using_our_app_would_you_mind_rating_us_on_the_app_store">If you are enjoy using our app . Would you mind rating us on the app store.</string>
    <string name="may_be_later">May Be, later</string>
    <string name="icon">icon</string>
    <string name="about_us">About Us</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="viewpageradapter">ViewPagerAdapter</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">INGREDIENTS:</string>
    <string name="ingredients2">Ingredients</string>
    <string name="preperation">Preperation</string>
    <string name="preperation2">Preperation</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="todo1">TODO</string>
    <string name="hi">Hi</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about_us2">About Us</string>
    <string name="favourites">Favourites</string>
</resources>