<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/bookmark_full"
            android:title="@string/favourites"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/rate_us"
            android:title="@string/rate_us"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/nav_share"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/about_us2"/>
    </group>
</menu>