<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/pink"/>

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="-75dp"
                android:background="@drawable/round_back_while_stroke_1000"
                android:padding="20dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_back_while_stroke_1000"/>
                <ImageView
                    android:id="@+id/ratingImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:padding="25dp"
                    android:src="@drawable/threestarrating"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_our_app"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/if_you_are_enjoy_using_our_app_would_you_mind_rating_us_on_the_app_store"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/app_name"
                android:rating="3"
                android:theme="@style/MyRating" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/laterBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_back_brown_6"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/may_be_later"
                    android:textAllCaps="false"
                    android:textColor="#000000" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rateNowBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_back_brown_6"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/rate_now"
                    android:textAllCaps="false"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>