<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:id="@+id/myCardView"
    android:background="@color/white"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_margin="2dp"
    app:cardUseCompatPadding="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true">
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:contentDescription="@string/recipeimage" />
        <LinearLayout
            android:id="@+id/linearlayout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button

                android:id="@+id/sharebtnRecipe"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:background="@drawable/nav_share"
                android:backgroundTint="@color/black"
                android:clickable="true"
                android:contentDescription="@string/sharebtn"
                android:focusable="true" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="@font/noto_serif"
                android:text="@string/recipe_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />
             <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_alignParentEnd="true"
                android:focusable="true"
                android:clickable="true"
                android:id="@+id/bookmark"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/ic_bookmarkborder"
                android:contentDescription="@string/heatbtn" />
</RelativeLayout>
        </LinearLayout>
        <TextView
            android:layout_margin="5dp"
            android:padding="2dp"
            android:id="@+id/somelinestext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#808080"
            android:textSize="15sp"
            android:maxLines="2"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>